portainer-web/portainer-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: portainer
  namespace: portainer-web
spec:
  serviceName: portainer
  replicas: 1
  selector:
    matchLabels:
      app: portainer
  template:
    metadata:
      labels:
        app: portainer
    spec:
      containers:
        - name: portainer
          image: portainer/portainer-ce:latest
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: 	/data
              name: data
      volumes:
        - name: data
          nfs:
            path: /export/Kubernetes/portainer
            server: 192.168.86.107
