portainer-web/portainer-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer-web
  labels:
    app.kubernetes.io/name: portainer-web
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: portainer
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.albinmedoc.se`)
      kind: Rule
      services:
        - name: portainer
          port: 9000
